--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.servlet.context-path=/hidubai
+server.servlet.context-path=/assessment-service
 logging.level.root=INFO
+
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=cars
