connected mongo for signup and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.servlet.context-path=/assessment-service
 logging.level.root=INFO
 
 spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=cars
+spring.data.mongodb.database=tenant
