--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
 }
-group = 'com.hidubai'
+group = 'com.somnathshirkule'
 sourceCompatibility = '1.8'
 
 apply plugin: 'war'
